--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
             </p>
         </div>
     </div>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+    <footer>
+        <h2 id="footer-h2">Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2024 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
