fixed nav links

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
+                <!-- Reconnected application links to properly connect nav bar to the linking section. -->
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
@@ -26,21 +27,21 @@
     </header>
     <section class="background-img"></section>
     <main>
-        <section class="boxes">
+        <section class="boxes" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="desk with computer, coffee, and a notbook that has an seo drawing"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section class="boxes">
+        <section class="boxes" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="laptop with a chart graph that reads reputation"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section class="boxes">
+        <section class="boxes" id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="an office table of workers that's filled with stickers of social media icons"/>
             <h2>Social Media Marketing</h2>
             <p>
